--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "version": "0.0.1",
   "license": "AGPL-3.0-only",
   "scripts": {
-    "start": "node -r ts-node/register src/index.ts",
+    "start": "cross-env PORT=3000 DATABASE_HOST=127.0.0.1 nodemon -w src -e ts -x 'node -r ts-node/register src/index.ts'",
     "start:debug": "node -r ts-node/register --inspect-brk src/index.ts",
     "db:local:start": "docker-compose -f docker-compose.yml up",
     "db:local:init": "mysql -uroot -pexample -h 127.0.0.1 -e 'source db-setup.sql'",
     "db:local:console": "mysql -uroot -pexample -h 127.0.0.1 demoForus"
   },
   "dependencies": {
+    "express": "^4.17.3",
     "mysql2": "^2.3.3",
     "ts-node": "^10.5.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "typescript": "^4.5.5"
   },
   "prettier": {
